--- a/servicios.html
+++ b/servicios.html
@@ -19,17 +19,17 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="projecte_updated.html">Epic Customs</a>
+            <a class="navbar-brand" href="index.html">Epic Customs</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="projecte_updated.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#proyectos">Proyectos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#testimonios">Testimonios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html"><strong>Inicio</strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#servicios"><strong>Servicios</strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#proyectos"><strong>Proyectos</strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#testimonios"><strong>Testimonios</strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contacto"><strong>Contacto</strong></a></li>
                 </ul>
             </div>
         </div>
