--- a/servicios.html
+++ b/servicios.html
@@ -25,7 +25,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html"><strong>Inicio</strong></a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html"><strong>Inicio</strong></a></li>
                     <li class="nav-item"><a class="nav-link" href="#servicios"><strong>Servicios</strong></a></li>
                     <li class="nav-item"><a class="nav-link" href="#proyectos"><strong>Proyectos</strong></a></li>
                     <li class="nav-item"><a class="nav-link" href="#testimonios"><strong>Testimonios</strong></a></li>
