--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Epic Customs - Personalización de Coches">
     <meta property="og:description" content="Expertos en tuning y personalización de vehículos. Descubre servicios de tuning, proyectos exclusivos y contacto.">
     <meta property="og:image" content="imagenes/instalacion-video.jpg">
-    <meta property="og:url" content="https://tuweb.com">
+    <meta property="og:url" content="139isac.github.io/EpicCustoms/">
 
     <script src="animacion.js" defer></script>
 
@@ -30,8 +30,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html"><strong>Inicio</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#servicios"><strong>Servicios</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#proyectos"><strong>Proyectos</strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="servicios.html"><strong>Servicios</strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="proyectos.html"><strong>Proyectos</strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="sobremi.html"><strong>Sobre mí</strong></a></li>
                     <li class="nav-item"><a class="nav-link" href="#testimonios"><strong>Testimonios</strong></a></li>
                     <li class="nav-item"><a class="nav-link" href="#contacto"><strong>Contacto</strong></a></li>
                 </ul>
