--- a/servicios.html
+++ b/servicios.html
@@ -10,14 +10,18 @@
     <link rel="stylesheet" href="estils.css">
     <link rel="icon" href="imagenes/favicon.jpg" type="image/x-icon">
 
-    <meta name="description" content="Descubre más sobre los servicios de personalización de vehículos de Epic Customs.">
-    <meta name="keywords" content="tuning coches, personalización vehículos, pintura, interiores, audio">
-    <meta name="author" content="EpicCustoms">
+    <meta name="keywords" content="tuning coches, personalización vehículos, proyectos exclusivos, servicios de tuning">
+    <meta property="og:title" content="Epic Customs - Personalización de Coches">
+    <meta property="og:description" content="Expertos en tuning y personalización de vehículos. Descubre servicios de tuning, proyectos exclusivos y contacto.">
+    <meta property="og:image" content="imagenes/instalacion-video.jpg">
+    <meta property="og:url" content="139isac.github.io/EpicCustoms/">
+
+    <script src="animacion.js" defer></script>
 </head>
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">Epic Customs</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,9 +29,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html"><strong>Inicio</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#servicios"><strong>Servicios</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#proyectos"><strong>Proyectos</strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html"><strong>Inicio</strong></a></li>
+                    <li class="nav-item"><a class="nav-link active" href="servicios.html"><strong>Servicios</strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="proyectos.html"><strong>Proyectos</strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="sobremi.html"><strong>Sobre mí</strong></a></li>
                     <li class="nav-item"><a class="nav-link" href="#testimonios"><strong>Testimonios</strong></a></li>
                     <li class="nav-item"><a class="nav-link" href="#contacto"><strong>Contacto</strong></a></li>
                 </ul>
