--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div class="mt-4 d-flex justify-content-center">
-            <a href="servicios.html" class="btn btn-secundario"><strong>Ver más proyectos</strong></a>
+            <a href="proyectos.html" class="btn btn-secundario"><strong>Ver más proyectos</strong></a>
         </div>
     </section>
 
