--- a/index.html
+++ b/index.html
@@ -9,17 +9,40 @@
     <!-- CSS Personalitzat -->
     <link rel="stylesheet" href="estils.css">
     <link rel="icon" href="imagenes/favicon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <meta name="keywords" content="tuning coches, personalización vehículos, proyectos exclusivos, servicios de tuning">
+    <meta name="author" content="Ismael Achamrouk">
     <meta property="og:title" content="Epic Customs - Personalización de Coches">
     <meta property="og:description" content="Expertos en tuning y personalización de vehículos. Descubre servicios de tuning, proyectos exclusivos y contacto.">
     <meta property="og:image" content="imagenes/instalacion-video.jpg">
-    <meta property="og:url" content="139isac.github.io/EpicCustoms/">
+    <meta property="og:url" content="https://139isac.github.io/EpicCustoms/index.html">
+    <meta name="cookie-policy" content="Este sitio usa cookies para mejorar la experiencia.">
 
     <script src="animacion.js" defer></script>
-
+    <!-- Schema.org datos estructurados -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "name": "Epic Customs",
+            "url": "https://139isac.github.io/EpicCustoms/",
+            "logo": "https://139isac.github.io/EpicCustoms/logo.png",
+            "sameAs": [
+                "https://www.facebook.com/ejemplo",
+                "https://www.twitter.com/ejemplo"
+            ]
+        }
+        </script>
 </head>
 <body>
+
+    <div id="cookie-banner" class="cookie-banner">
+        <p>Este sitio usa cookies para mejorar la experiencia. <a href="/politica-de-cookies" target="_blank">Más información</a>.</p>
+        <button id="accept-cookies">Aceptar</button>
+    </div>
+    
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container">
@@ -33,8 +56,8 @@
                     <li class="nav-item"><a class="nav-link" href="servicios.html"><strong>Servicios</strong></a></li>
                     <li class="nav-item"><a class="nav-link" href="proyectos.html"><strong>Proyectos</strong></a></li>
                     <li class="nav-item"><a class="nav-link" href="sobremi.html"><strong>Sobre mí</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#testimonios"><strong>Testimonios</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contacto"><strong>Contacto</strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="testimonios.html"><strong>Testimonios</strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html"><strong>Contacto</strong></a></li>
                 </ul>
             </div>
         </div>
@@ -43,7 +66,7 @@
     <!-- Sección Hero -->
     <header class="hero">
         <div class="container text-center">
-            <h1>Epic Customs - Personalización de Coches</h1>
+            <h1><em>Epic Customs - Personalización de Coches</em></h1>
             <p class="lead">Lleva tu coche al siguiente nivel con diseños únicos y exclusivos.</p>
             <a href="#servicios" class="btn btn-primary"><strong>Descubre nuestros servicios</strong></a>
         </div>
@@ -52,10 +75,10 @@
     <!-- Sección Servicios -->
     <section id="servicios" class="py-5">
         <div class="container text-center">
-            <h2 class="mb-4">Nuestros Servicios</h2>
+            <h2 class="mb-4"><em>Nuestros Servicios</em></h2>
             <div class="row g-4">
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card h-100">
                         <img src="imagenes/pintura.jpg" class="card-img-top" alt="Pintura Personalizada">
                         <div class="card-body">
                             <h3 class="card-title">Pintura Personalizada</h3>
@@ -64,7 +87,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card h-100">
                         <img src="imagenes/interiores.jpg" class="card-img-top" alt="Interiores de Lujo">
                         <div class="card-body">
                             <h3 class="card-title">Mejoras de Interiores</h3>
@@ -73,7 +96,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card h-100">
                         <img src="imagenes/audio.jpg" class="card-img-top" alt="Equipos de Audio">
                         <div class="card-body">
                             <h3 class="card-title">Equipos de Audio</h3>
@@ -83,14 +106,14 @@
                 </div>
             </div>
             <div class="mt-4"></div>
-                <a href="servicios.html" class="btn btn-secundario"><strong>Ver más servicios</strong></a>
+                <a href="servicios.html" class="btn btn-secundario"><strong>Más servicios</strong></a>
             </div>
     </section>
 
     <!-- Sección Proyectos -->
     <section id="proyectos" class="py-5 bg-dark text-white">
         <div class="container">
-            <h2 class="text-center mb-4">Proyectos Recientes</h2>
+            <h2 class="text-center mb-4"><em>Proyectos Recientes</em></h2>
             <div class="row g-4">
                 <div class="col-md-6">
                     <img src="imagenes/proyecto1.jpg" alt="Proyecto Mustang GT Edición Especial" class="img-fluid rounded shadow">
@@ -105,14 +128,14 @@
             </div>
         </div>
         <div class="mt-4 d-flex justify-content-center">
-            <a href="proyectos.html" class="btn btn-secundario"><strong>Ver más proyectos</strong></a>
+            <a href="proyectos.html" class="btn btn-secundario"><strong>Más proyectos</strong></a>
         </div>
     </section>
 
     <!-- Sección Testimonios -->
     <section id="testimonios" class="py-5">
         <div class="container text-center">
-            <h2 class="mb-4">Opiniones de Clientes</h2>
+            <h2 class="mb-4"><em>Opiniones de Clientes</em></h2>
             <div class="row g-4">
                 <div class="col-md-4">
                     <blockquote class="blockquote">
@@ -132,43 +155,91 @@
                         <footer class="blockquote-footer">Juan, Sevilla</footer>
                     </blockquote>
                 </div>
+                <div class="text-center mt-4">
+                    <a href="testimonios.html" class="btn btn-secundario btn-lg" role="button">
+                        <strong>Ver Más Opiniones de Clientes</strong>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Sección Contacto -->
-    <section id="contacto" class="py-5 bg-secondary text-white">
-        <div class="container text-center">
-            <h2 class="mb-4">Contáctanos</h2>
-            <form>
-                <div class="row g-3">
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" placeholder="Nombre" required>
-                    </div>
-                    <div class="col-md-6">
-                        <input type="email" class="form-control" placeholder="Correo Electrónico" required>
-                    </div>
+<section id="contacto" class="py-5 bg-secondary text-white">
+    <div class="container text-center">
+        <h2 class="mb-4"><em>Contacto rápido</em></h2>
+        <form>
+            <div class="row g-3">
+                <div class="col-md-6">
+                    <input type="text" class="form-control" placeholder="Nombre" required>
                 </div>
-                <div class="mt-3">
-                    <textarea class="form-control" rows="5" placeholder="Mensaje" required></textarea>
+                <div class="col-md-6">
+                    <input type="email" class="form-control" placeholder="Correo Electrónico" required>
                 </div>
-                <div class="mt-3">
-                    <button type="submit" class="btn btn-primary"><strong>Enviar</strong></button>
-                </div>
-            </form>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="text-center bg-dark text-white py-4">
-        <div class="container">
-            <p>&copy; 2024 EpicCustoms. Todos los derechos reservados.</p>
-            <div>
-                <a href="https://facebook.com" class="text-white me-3">Facebook</a>
-                <a href="https://instagram.com" class="text-white">Instagram</a>
             </div>
+            <div class="mt-3">
+                <textarea class="form-control" rows="5" placeholder="Mensaje" required></textarea>
+            </div>
+            <div class="mt-3">
+                <!-- Primer botón -->
+                <button type="submit" class="btn btn-primary"><strong>Enviar</strong></button>
+                <!-- Segundo botón redirigiendo a contacto_avanzado.html -->
+                <a href="contacto.html" class="btn btn-primary"><strong>Contacto específico</strong></a>
+            </div>
+        </form>
+    </div>
+</section>
+
+
+
+<!-- Footer -->
+<footer class="footer bg-dark text-white py-5">
+    <div class="container">
+        <div class="row">
+            <!-- Sección de Navegación -->
+            <div class="col-md-4">
+                <h5>Epic Customs</h5>
+                <ul class="list-unstyled">
+                    <li><a href="index.html" class="text-white text-decoration-none">Inicio</a></li>
+                    <li><a href="servicios.html" class="text-white text-decoration-none">Servicios</a></li>
+                    <li><a href="proyectos.html" class="text-white text-decoration-none">Proyectos</a></li>
+                    <li><a href="contacto.html" class="text-white text-decoration-none">Contacto</a></li>
+                </ul>
+            </div>
+
+            <!-- Sección de Redes Sociales -->
+            <div class="col-md-4 text-center">
+                <h5>Síguenos</h5>
+                <div>
+                    <a href="https://facebook.com" class="text-white me-3"><i class="fab fa-facebook fa-lg"></i></a>
+                    <a href="https://instagram.com" class="text-white me-3"><i class="fab fa-instagram fa-lg"></i></a>
+                    <a href="https://twitter.com" class="text-white"><i class="fab fa-twitter fa-lg"></i></a>
+                </div>
+            </div>
+
+            <!-- Sección de Información -->
+            <div class="col-md-4 text-md-end">
+                <h5>Contacto</h5>
+                <p>Email: <a href="mailto:info@epiccustoms.com" class="text-white text-decoration-none">info@epiccustoms.com</a></p>
+                <p>Teléfono: <a href="tel:+123456789" class="text-white text-decoration-none">+34 123 456 789</a></p>
+                <p>&copy; 2024 Epic Customs. Todos los derechos reservados.</p>
+            </div>
+
+            <!-- Información de LOPD y RGPD -->
+            <div class="mt-3 text-center">
+                <p><strong><em>Política de Privacidad y Protección de Datos</em></strong></p>
+                <p>En cumplimiento de la <strong>LOPD</strong> y el <strong>RGPD</strong>, en Epic Customs nos comprometemos a proteger 
+                    tu privacidad y la de todos nuestros usuarios. Los datos personales que nos proporcionas serán tratados con estricta confidencialidad y serán utilizados 
+                    únicamente para responder a tus consultas y ofrecer nuestros servicios.</p>
+                <p>Para más información sobre cómo tratamos tus datos personales, consulta nuestra <a href="politica_privacidad.html" class="text-white"><strong><em>Política de Privacidad</em></strong></a>.</p>
+                <p>Al continuar navegando en nuestra página web, aceptas nuestra política de privacidad y 
+                    el uso de cookies según nuestra <a href="politica_cookies.html" class="text-white"><strong><em>Política de Cookies</em></strong></a>.</p>
+            </div>
+
         </div>
-    </footer>
+    </div>
+</footer>
+
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
