--- a/servicios.html
+++ b/servicios.html
@@ -3,20 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ver Más Servicios - Epic Customs</title>
+    <title>Epic Customs</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- CSS Personalizado -->
+    <!-- CSS Personalitzat -->
     <link rel="stylesheet" href="estils.css">
     <link rel="icon" href="imagenes/favicon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <meta name="keywords" content="tuning coches, personalización vehículos, proyectos exclusivos, servicios de tuning">
+    <meta name="author" content="Ismael Achamrouk">
     <meta property="og:title" content="Epic Customs - Personalización de Coches">
     <meta property="og:description" content="Expertos en tuning y personalización de vehículos. Descubre servicios de tuning, proyectos exclusivos y contacto.">
     <meta property="og:image" content="imagenes/instalacion-video.jpg">
-    <meta property="og:url" content="139isac.github.io/EpicCustoms/">
+    <meta property="og:url" content="https://139isac.github.io/EpicCustoms/index.html">
+    <meta name="cookie-policy" content="Este sitio usa cookies para mejorar la experiencia.">
 
     <script src="animacion.js" defer></script>
+    <!-- Schema.org datos estructurados -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "name": "Epic Customs",
+            "url": "https://139isac.github.io/EpicCustoms/",
+            "logo": "https://139isac.github.io/EpicCustoms/logo.png",
+            "sameAs": [
+                "https://www.facebook.com/ejemplo",
+                "https://www.twitter.com/ejemplo"
+            ]
+        }
+        </script>
 </head>
 <body>
 
@@ -33,8 +50,8 @@
                     <li class="nav-item"><a class="nav-link active" href="servicios.html"><strong>Servicios</strong></a></li>
                     <li class="nav-item"><a class="nav-link" href="proyectos.html"><strong>Proyectos</strong></a></li>
                     <li class="nav-item"><a class="nav-link" href="sobremi.html"><strong>Sobre mí</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#testimonios"><strong>Testimonios</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contacto"><strong>Contacto</strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="testimonios.html"><strong>Testimonios</strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html"><strong>Contacto</strong></a></li>
                 </ul>
             </div>
         </div>
@@ -48,93 +65,240 @@
         </div>
     </header>
 
-    <!-- Sección Servicios Detallados -->
-    <section id="servicios-detallados" class="py-5">
+    <!-- Sección Servicios Iniciales -->
+    <section class="py-5">
         <div class="container">
             <h2 class="text-center mb-4">Nuestros Servicios</h2>
             <div class="row g-4">
                 <!-- Pintura Personalizada -->
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card h-100">
                         <img src="imagenes/pintura.jpg" class="card-img-top" alt="Pintura Personalizada">
                         <div class="card-body">
                             <h3 class="card-title">Pintura Personalizada</h3>
-                            <p class="card-text">Transformamos el aspecto de tu vehículo con acabados de alta calidad y diseños únicos. Ya sea para un cambio radical o un toque sutil, te ofrecemos una pintura exclusiva.</p>
-                            <a href="#" class="btn btn-primary">Más información</a>
+                            <p class="card-text">Transformamos el aspecto de tu vehículo con acabados únicos.</p>
+                            <a href="#servicios-detallados" class="btn btn-primary">Más información</a>
                         </div>
                     </div>
                 </div>
 
                 <!-- Mejoras de Interiores -->
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card h-100">
                         <img src="imagenes/interiores.jpg" class="card-img-top" alt="Mejoras de Interiores">
                         <div class="card-body">
                             <h3 class="card-title">Mejoras de Interiores</h3>
-                            <p class="card-text">Rediseña el interior de tu vehículo con materiales de lujo y tecnología avanzada. Comodidad, diseño y estilo combinados para una experiencia única.</p>
-                            <a href="#" class="btn btn-primary">Más información</a>
+                            <p class="card-text">Diseños de lujo para el interior de tu coche.</p>
+                            <a href="#detalle-interiores" class="btn btn-primary">Más información</a>
                         </div>
                     </div>
                 </div>
 
                 <!-- Equipos de Audio -->
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card h-100">
                         <img src="imagenes/audio.jpg" class="card-img-top" alt="Equipos de Audio">
                         <div class="card-body">
                             <h3 class="card-title">Equipos de Audio</h3>
-                            <p class="card-text">Instalamos los sistemas de sonido más avanzados, con componentes de alta gama que ofrecen una experiencia auditiva inigualable en tu vehículo.</p>
-                            <a href="#" class="btn btn-primary">Más información</a>
+                            <p class="card-text">Instalamos sistemas de sonido de alta gama.</p>
+                            <a href="#detalle-audio" class="btn btn-primary">Más información</a>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Más Servicios -->
-            <div class="row g-4 mt-5">
+            <div class="row g-4 mt-4">
+                <!-- Accesorios Personalizados -->
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card h-100">
                         <img src="imagenes/accesorios.jpeg" class="card-img-top" alt="Accesorios Personalizados">
                         <div class="card-body">
                             <h3 class="card-title">Accesorios Personalizados</h3>
-                            <p class="card-text">Accesorios exclusivos para personalizar tu coche a tu gusto: desde llantas hasta acabados interiores.</p>
-                            <a href="#" class="btn btn-primary">Más información</a>
+                            <p class="card-text">Accesorios exclusivos para tu coche.</p>
+                            <a href="#detalle-accesorios" class="btn btn-primary">Más información</a>
                         </div>
                     </div>
                 </div>
 
+                <!-- Afinación de Motor -->
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card h-100">
                         <img src="imagenes/motor.jpg" class="card-img-top" alt="Afinación de Motor">
                         <div class="card-body">
                             <h3 class="card-title">Afinación de Motor</h3>
-                            <p class="card-text">Optimiza el rendimiento de tu vehículo con nuestros servicios de afinación y ajustes de motor, para obtener la máxima potencia y eficiencia.</p>
-                            <a href="#" class="btn btn-primary">Más información</a>
+                            <p class="card-text">Rendimiento óptimo para tu motor.</p>
+                            <a href="#detalle-motor" class="btn btn-primary">Más información</a>
                         </div>
                     </div>
                 </div>
 
+                <!-- Sistemas de Video -->
                 <div class="col-md-4">
-                    <div class="card">
-                        <img src="imagenes/instalacion-video.jpg" class="card-img-top" alt="Instalación de Sistemas de Video">
+                    <div class="card h-100">
+                        <img src="imagenes/instalacion-video2.jpg" class="card-img-top" alt="Sistemas de Video">
                         <div class="card-body">
-                            <h3 class="card-title">Instalación de Sistemas de Video</h3>
-                            <p class="card-text">Instalamos pantallas, sistemas de entretenimiento y opciones de conectividad para que disfrutes al máximo de tu vehículo.</p>
-                            <a href="#" class="btn btn-primary">Más información</a>
+                            <h3 class="card-title">Sistemas de Video</h3>
+                            <p class="card-text">Entretenimiento para tu vehículo.</p>
+                            <a href="#detalle-video" class="btn btn-primary">Más información</a>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="text-center bg-dark text-white py-4">
-        <div class="container">
-            <p>&copy; 2024 EpicCustoms. Todos los derechos reservados.</p>
+
+    <!-- Sección Servicios Detallados -->
+<section id="servicios-detallados" class="py-5 bg-dark text-white">
+    <div class="container">
+        <h2 class="text-center mb-4"><em>Detalles de los Servicios</em></h2>
+
+        <!-- Pintura Personalizada -->
+        <div id="detalle-pintura" class="detalle-servicio mb-5 d-flex align-items-center">
+            <img src="imagenes/pintura.jpg" alt="Pintura Personalizada" class="img-fluid me-4" style="max-width: 300px;">
+            <div>
+                <h3><em>Pintura Personalizada</em></h3>
+                <ul>
+                    <li><strong>¿Qué ofrecemos?:</strong> Acabados de pintura con técnicas avanzadas como aerografía, efectos metálicos o mate, y combinaciones de colores únicas.</li>
+                    <li><strong>Beneficio clave:</strong> Personaliza el exterior de tu coche para que destaque entre los demás. Ideal para renovar o transformar completamente su aspecto.</li>
+                    <li><strong>Detalles especiales:</strong> Usamos pinturas ecológicas y resistentes a rayos UV para garantizar durabilidad y protección frente a condiciones climáticas extremas.</li>
+                </ul>
+                <p>Convierte tu coche en una obra de arte móvil. Creamos diseños exclusivos que hacen que tu vehículo destaque en cualquier lugar.</p>
+            </div>
         </div>
-    </footer>
+
+        <!-- Mejoras de Interiores -->
+        <div id="detalle-interiores" class="detalle-servicio mb-5 d-flex align-items-center">
+            <img src="imagenes/interiores.jpg" alt="Mejoras de Interiores" class="img-fluid me-4" style="max-width: 300px;">
+            <div>
+                <h3><em>Mejoras de Interiores</em></h3>
+                <ul>
+                    <li><strong>¿Qué incluye?:</strong> Tapicería en cuero, costuras personalizadas, instalación de paneles táctiles, luces ambientales LED y más.</li>
+                    <li><strong>Beneficio clave:</strong>  Eleva la comodidad y el lujo de tu coche, creando una experiencia de conducción más placentera y moderna.</li>
+                    <li><strong>Detalles especiales:</strong> Materiales resistentes a manchas y desgaste, con opciones de personalización ilimitada en colores y texturas.</li>
+                </ul>
+                <p>Experimenta el lujo y la comodidad en cada viaje. Transformamos tu vehículo en un espacio sofisticado y funcional.</p>
+            </div>
+        </div>
+
+        <!-- Equipos de Audio -->
+        <div id="detalle-audio" class="detalle-servicio mb-5 d-flex align-items-center">
+            <img src="imagenes/audio.jpg" alt="Equipos de Audio" class="img-fluid me-4" style="max-width: 300px;">
+            <div>
+                <h3><em>Equipos de Audio</em></h3>
+                <ul>
+                    <li><strong>¿Qué instalamos?:</strong> Altavoces de alta fidelidad, subwoofers, amplificadores y sistemas con conectividad Bluetooth y Wi-Fi.</li>
+                    <li><strong>Beneficio clave:</strong> Experimenta un sonido potente y envolvente con tecnología optimizada para tu vehículo.</li>
+                    <li><strong>Detalles especiales:</strong> Configuración personalizada para maximizar la acústica del coche, con modos de sonido envolvente o direccional.</li>
+                </ul>
+                <p>Redefine tu experiencia auditiva. Ofrecemos una calidad de sonido que hace cada trayecto más emocionante.</p>
+            </div>
+        </div>
+
+        <!-- Accesorios Personalizados -->
+        <div id="detalle-accesorios" class="detalle-servicio mb-5 d-flex align-items-center">
+            <img src="imagenes/accesorios.jpeg" alt="Accesorios Personalizados" class="img-fluid me-4" style="max-width: 300px;">
+            <div>
+                <h3><em>Accesorios Personalizados</em></h3>
+                <ul>
+                    <li><strong>¿Qué ofrecemos?:</strong> Llantas exclusivas, alerones, luces personalizadas, pedales deportivos y acabados interiores únicos.</li>
+                    <li><strong>Beneficio clave:</strong> Dale un toque personal a tu coche, reflejando tu estilo y personalidad en cada detalle.</li>
+                    <li><strong>Detalles especiales:</strong> Instalación rápida sin alterar la estructura original del vehículo, con garantías de ajuste perfecto.</li>
+                </ul>
+                <p>Haz que tu coche refleje tu personalidad con detalles únicos y exclusivos.</p>
+            </div>
+        </div>
+
+        <!-- Afinación de Motor -->
+        <div id="detalle-motor" class="detalle-servicio mb-5 d-flex align-items-center">
+            <img src="imagenes/motor.jpg" alt="Afinación de Motor" class="img-fluid me-4" style="max-width: 300px;">
+            <div>
+                <h3><em>Afinación de Motor</em></h3>
+                <ul>
+                    <li><strong>¿Qué incluye?:</strong> Reprogramación del ECU, mejoras en el sistema de escape, ajustes del turbo y calibraciones de alto rendimiento.</li>
+                    <li><strong>Beneficio clave:</strong> Saca el máximo potencial de tu motor, mejorando la potencia, eficiencia y velocidad.</li>
+                    <li><strong>Detalles especiales:</strong> Test de rendimiento antes y después de la afinación, y asesoría para cumplir normativas de emisiones.</li>
+                </ul>
+                <p>Mejora el rendimiento de tu motor para una conducción más segura y eficiente en cualquier terreno.</p>
+            </div>
+        </div>
+
+        <!-- Sistemas de Video -->
+        <div id="detalle-video" class="detalle-servicio d-flex align-items-center">
+            <img src="imagenes/instalacion-video.jpg" alt="Sistemas de Video" class="img-fluid me-4" style="max-width: 300px;">
+            <div>
+                <h3><em>Sistemas de Video</em></h3>
+                <ul>
+                    <li><strong>¿Qué instalamos?:</strong> Pantallas táctiles, reproductores multimedia, cámaras de 360º y sistemas de entretenimiento en asientos traseros.</li>
+                    <li><strong>Beneficio clave:</strong> Entretenimiento sin límites durante los viajes, ideal para familias o largas rutas.</li>
+                    <li><strong>Detalles especiales:</strong> Interfaces intuitivas con actualizaciones de software garantizadas y configuraciones sin cables visibles.</li>
+                </ul>
+                <p>Convierte cada viaje en una experiencia entretenida y moderna con nuestras soluciones audiovisuales.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<script>
+    // Ajuste del desplazamiento al hacer clic en los enlaces
+    document.querySelectorAll('.btn.btn-primary').forEach(button => {
+        button.addEventListener('click', function(event) {
+            event.preventDefault();
+            const targetId = this.getAttribute('href').substring(1);
+            const targetElement = document.getElementById(targetId);
+            const offset = targetElement.getBoundingClientRect().top + window.scrollY - 100; // Ajuste de 100px arriba
+            window.scrollTo({ top: offset, behavior: 'smooth' });
+        });
+    });
+</script>
+
+    <!-- Footer -->
+<footer class="footer bg-dark text-white py-5">
+    <div class="container">
+        <div class="row">
+            <!-- Sección de Navegación -->
+            <div class="col-md-4">
+                <h5>Epic Customs</h5>
+                <ul class="list-unstyled">
+                    <li><a href="index.html" class="text-white text-decoration-none">Inicio</a></li>
+                    <li><a href="servicios.html" class="text-white text-decoration-none">Servicios</a></li>
+                    <li><a href="proyectos.html" class="text-white text-decoration-none">Proyectos</a></li>
+                    <li><a href="contacto.html" class="text-white text-decoration-none">Contacto</a></li>
+                </ul>
+            </div>
+
+            <!-- Sección de Redes Sociales -->
+            <div class="col-md-4 text-center">
+                <h5>Síguenos</h5>
+                <div>
+                    <a href="https://facebook.com" class="text-white me-3"><i class="fab fa-facebook fa-lg"></i></a>
+                    <a href="https://instagram.com" class="text-white me-3"><i class="fab fa-instagram fa-lg"></i></a>
+                    <a href="https://twitter.com" class="text-white"><i class="fab fa-twitter fa-lg"></i></a>
+                </div>
+            </div>
+
+            <!-- Sección de Información -->
+            <div class="col-md-4 text-md-end">
+                <h5>Contacto</h5>
+                <p>Email: <a href="mailto:info@epiccustoms.com" class="text-white text-decoration-none">info@epiccustoms.com</a></p>
+                <p>Teléfono: <a href="tel:+123456789" class="text-white text-decoration-none">+34 123 456 789</a></p>
+                <p>&copy; 2024 Epic Customs. Todos los derechos reservados.</p>
+            </div>
+
+            <!-- Información de LOPD y RGPD -->
+            <div class="mt-3 text-center">
+                <p><strong><em>Política de Privacidad y Protección de Datos</em></strong></p>
+                <p>En cumplimiento de la <strong>LOPD</strong> y el <strong>RGPD</strong>, en Epic Customs nos comprometemos a proteger 
+                    tu privacidad y la de todos nuestros usuarios. Los datos personales que nos proporcionas serán tratados con estricta confidencialidad y serán utilizados 
+                    únicamente para responder a tus consultas y ofrecer nuestros servicios.</p>
+                <p>Para más información sobre cómo tratamos tus datos personales, consulta nuestra <a href="politica_privacidad.html" class="text-white"><strong><em>Política de Privacidad</em></strong></a>.</p>
+                <p>Al continuar navegando en nuestra página web, aceptas nuestra política de privacidad y 
+                    el uso de cookies según nuestra <a href="politica_cookies.html" class="text-white"><strong><em>Política de Cookies</em></strong></a>.</p>
+            </div>
+
+        </div>
+    </div>
+</footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
