--- a/contacto.html
+++ b/contacto.html
@@ -37,29 +37,25 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <div class="container">
+    <nav>
+        <div class="logo">
             <a class="navbar-brand" href="index.html">Epic Customs</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html"><strong>Inicio</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="servicios.html"><strong>Servicios</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="proyectos.html"><strong>Proyectos</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="sobremi.html"><strong>Sobre mí</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="testimonios.html"><strong>Testimonios</strong></a></li>
-                    <li class="nav-item"><a class="nav-link active" href="contacto.html"><strong>Contacto</strong></a></li>
-                </ul>
-            </div>
         </div>
+        <ul class="nav-links">
+            <li class="nav-item"><a href="index.html"><strong>Inicio</strong></a></li>
+            <li class="nav-item"><a href="servicios.html"><strong>Servicios</strong></a></li>
+            <li class="nav-item"><a href="proyectos.html"><strong>Proyectos</strong></a></li>
+            <li class="nav-item"><a href="sobremi.html"><strong>Sobre mí</strong></a></li>
+            <li class="nav-item"><a href="testimonios.html"><strong>Testimonios</strong></a></li>
+            <li class="nav-item"><a class="nav-link active" href="contacto.html"><strong>Contacto</strong></a></li>
+        </ul>
     </nav>
+    
 
     <!-- Sección de Contacto -->
     <section class="py-5" style="background-color: #000000; color: white;">
         <div class="container">
-            <h1 class="text-center mb-4"><em>Contáctanos</em></h1>
+            <h1 class="text-center mb-4"><em>💬 Contáctanos</em></h1>
             <p class="text-center mb-4">¿Tienes alguna consulta o idea para tu vehículo? Completa el formulario y nos pondremos en contacto contigo lo antes posible.</p>
             <div class="alert alert-success text-center" id="mensaje-exito" style="display: none;">
                 ¡Gracias por contactarnos! Responderemos a tu mensaje pronto.
@@ -99,8 +95,9 @@
                         </div>
                         <!-- Botón de Enviar -->
                         <div class="text-center">
-                            <button type="submit" class="btn btn-primary btn-lg">Enviar Mensaje</button>
+                            <button type="submit" class="btn btn-primary btn-lg"><strong>Enviar Mensaje 📩</strong></button>
                         </div>
+
                     </form>
                 </div>
             </div>
