--- a/proyectos.html
+++ b/proyectos.html
@@ -37,29 +37,24 @@
 </head>
 <body>
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-    <div class="container">
+<nav>
+    <div class="logo">
         <a class="navbar-brand" href="index.html">Epic Customs</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html"><strong>Inicio</strong></a></li>
-                <li class="nav-item"><a class="nav-link" href="servicios.html"><strong>Servicios</strong></a></li>
-                <li class="nav-item"><a class="nav-link active" href="proyectos.html"><strong>Proyectos</strong></a></li>
-                <li class="nav-item"><a class="nav-link" href="sobremi.html"><strong>Sobre mí</strong></a></li>                
-                <li class="nav-item"><a class="nav-link" href="testimonios.html"><strong>Testimonios</strong></a></li>
-                <li class="nav-item"><a class="nav-link" href="contacto.html"><strong>Contacto</strong></a></li>
-            </ul>
-        </div>
     </div>
+    <ul class="nav-links">
+        <li class="nav-item"><a href="index.html"><strong>Inicio</strong></a></li>
+        <li class="nav-item"><a href="servicios.html"><strong>Servicios</strong></a></li>
+        <li class="nav-item"><a class="active" href="proyectos.html"><strong>Proyectos</strong></a></li>
+        <li class="nav-item"><a href="sobremi.html"><strong>Sobre mí</strong></a></li>
+        <li class="nav-item"><a href="testimonios.html"><strong>Testimonios</strong></a></li>
+        <li class="nav-item"><a href="contacto.html"><strong>Contacto</strong></a></li>
+    </ul>
 </nav>
 
 <!-- Hero Section -->
 <header class="hero">
     <div class="container text-center">
-        <h1><em>Proyectos de Personalización Automotriz</em></h1>
+        <h1><em>🏎️⚡ Proyectos de Personalización Automotriz</em></h1>
         <p class="lead">Descubre cómo hemos transformado vehículos en verdaderas obras de arte con unos cambios que te haran desear que fuera tu propio coche.
              ¡Cada proyecto cuenta una historia única!</p>
     </div>
@@ -69,7 +64,7 @@
 <!-- Sección Proyectos -->
 <section id="proyectos" class="py-5">
     <div class="container">
-        <h2 class="text-center mb-4"><em>Nuestros Proyectos Recientes</em></h2>
+        <h2 class="text-center mb-4"><em>Nuestros Proyectos Mas Recientes ✨</em></h2>
 
         <br>
 
@@ -88,7 +83,7 @@
         </ul>
     </div>
     <div class="col-lg-8">
-        <h3>Mustang GT - Edición Especial BULLITT</h3>
+        <h3>Mustang GT - Edición Especial BULLITT 🏋️‍♂️</h3>
         <ul>
             <li><strong>Descripción:</strong> Esta edición especial del Mustang GT ha sido completamente transformada, inspirada en la famosa película Bullitt. La pintura verde oscuro, 
                 junto con los detalles en negro mate, le dan un aspecto único y distintivo. El motor ha sido optimizado para ofrecer un rendimiento superior, y el interior ha sido modificado 
@@ -116,7 +111,7 @@
         </ul>
     </div>
     <div class="col-lg-8">
-        <h3>BMW Serie 3 - Sound Upgrade</h3>
+        <h3>BMW Serie 3 - Sound Upgrade 🔊</h3>
         <ul>
             <li><strong>Descripción:</strong> Este BMW Serie 3 fue transformado no solo en términos de estética, sino también en su rendimiento acústico. Se instaló un sistema de sonido de alta gama, 
                 con altavoces personalizados y un subwoofer que proporciona una calidad de audio excepcional. 
@@ -145,7 +140,7 @@
         </ul>
     </div>
     <div class="col-lg-8">
-        <h3>Audi RS5 - Personalización Total</h3>
+        <h3>Audi RS5 - Personalización Total 🛠️🏎️</h3>
         <ul>
             <li><strong>Descripción:</strong> El Audi RS5 es una máquina poderosa por sí misma, pero en este proyecto buscamos llevar su rendimiento y estética a un nivel superior. Se instalaron mejoras 
                 en la suspensión para una mayor estabilidad y control, frenos de alto rendimiento para una respuesta más precisa y un sistema de escape modificado que proporciona un sonido más agresivo y 
@@ -174,7 +169,7 @@
         </ul>
     </div>
     <div class="col-lg-8">
-        <h3>Chevrolet Camaro - Tuning Completo</h3>
+        <h3>Chevrolet Camaro - Tuning Completo 💪🚀</h3>
         <ul>
             <li><strong>Descripción:</strong> En este Chevrolet Camaro se realizó un tuning completo, abarcando tanto el motor como los detalles estéticos. Se optimizó el rendimiento del motor con una nueva 
                 ECU personalizada, lo que aumentó significativamente su potencia y respuesta. Además, se instaló un sistema de suspensión ajustable que permite adaptar el vehículo a diferentes condiciones de 
