--- a/servicios.html
+++ b/servicios.html
@@ -38,29 +38,24 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <div class="container">
+    <nav>
+        <div class="logo">
             <a class="navbar-brand" href="index.html">Epic Customs</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html"><strong>Inicio</strong></a></li>
-                    <li class="nav-item"><a class="nav-link active" href="servicios.html"><strong>Servicios</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="proyectos.html"><strong>Proyectos</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="sobremi.html"><strong>Sobre mí</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="testimonios.html"><strong>Testimonios</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacto.html"><strong>Contacto</strong></a></li>
-                </ul>
-            </div>
         </div>
+        <ul class="nav-links">
+            <li class="nav-item"><a href="index.html"><strong>Inicio</strong></a></li>
+            <li class="nav-item"><a class="active" href="servicios.html"><strong>Servicios</strong></a></li>
+            <li class="nav-item"><a href="proyectos.html"><strong>Proyectos</strong></a></li>
+            <li class="nav-item"><a href="sobremi.html"><strong>Sobre mí</strong></a></li>
+            <li class="nav-item"><a href="testimonios.html"><strong>Testimonios</strong></a></li>
+            <li class="nav-item"><a href="contacto.html"><strong>Contacto</strong></a></li>
+        </ul>
     </nav>
 
     <!-- Hero Section -->
     <header class="hero">
         <div class="container text-center">
-            <h1>Servicios de Personalización</h1>
+            <h1>Servicios de Personalización 🎨</h1>
             <p class="lead">Lleva tu vehículo al siguiente nivel con nuestros servicios exclusivos de personalización.</p>
         </div>
     </header>
@@ -68,7 +63,7 @@
     <!-- Sección Servicios Iniciales -->
     <section class="py-5">
         <div class="container">
-            <h2 class="text-center mb-4">Nuestros Servicios</h2>
+            <h2 class="text-center mb-4">🛠️ Nuestros Servicios</h2>
             <div class="row g-4">
                 <!-- Pintura Personalizada -->
                 <div class="col-md-4">
@@ -77,7 +72,7 @@
                         <div class="card-body">
                             <h3 class="card-title">Pintura Personalizada</h3>
                             <p class="card-text">Transformamos el aspecto de tu vehículo con acabados únicos.</p>
-                            <a href="#servicios-detallados" class="btn btn-primary">Más información</a>
+                            <a href="#servicios-detallados" class="btn btn-primary"><strong>Más información</strong></a>
                         </div>
                     </div>
                 </div>
@@ -89,7 +84,7 @@
                         <div class="card-body">
                             <h3 class="card-title">Mejoras de Interiores</h3>
                             <p class="card-text">Diseños de lujo para el interior de tu coche.</p>
-                            <a href="#detalle-interiores" class="btn btn-primary">Más información</a>
+                            <a href="#detalle-interiores" class="btn btn-primary"><strong>Más información</strong></a>
                         </div>
                     </div>
                 </div>
@@ -101,7 +96,7 @@
                         <div class="card-body">
                             <h3 class="card-title">Equipos de Audio</h3>
                             <p class="card-text">Instalamos sistemas de sonido de alta gama.</p>
-                            <a href="#detalle-audio" class="btn btn-primary">Más información</a>
+                            <a href="#detalle-audio" class="btn btn-primary"><strong>Más información</strong></a>
                         </div>
                     </div>
                 </div>
@@ -115,7 +110,7 @@
                         <div class="card-body">
                             <h3 class="card-title">Accesorios Personalizados</h3>
                             <p class="card-text">Accesorios exclusivos para tu coche.</p>
-                            <a href="#detalle-accesorios" class="btn btn-primary">Más información</a>
+                            <a href="#detalle-accesorios" class="btn btn-primary"><strong>Más información</strong></a>
                         </div>
                     </div>
                 </div>
@@ -127,7 +122,7 @@
                         <div class="card-body">
                             <h3 class="card-title">Afinación de Motor</h3>
                             <p class="card-text">Rendimiento óptimo para tu motor.</p>
-                            <a href="#detalle-motor" class="btn btn-primary">Más información</a>
+                            <a href="#detalle-motor" class="btn btn-primary"><strong>Más información</strong></a>
                         </div>
                     </div>
                 </div>
@@ -139,7 +134,7 @@
                         <div class="card-body">
                             <h3 class="card-title">Sistemas de Video</h3>
                             <p class="card-text">Entretenimiento para tu vehículo.</p>
-                            <a href="#detalle-video" class="btn btn-primary">Más información</a>
+                            <a href="#detalle-video" class="btn btn-primary"><strong>Más información</strong></a>
                         </div>
                     </div>
                 </div>
@@ -151,13 +146,15 @@
     <!-- Sección Servicios Detallados -->
 <section id="servicios-detallados" class="py-5 bg-dark text-white">
     <div class="container">
-        <h2 class="text-center mb-4"><em>Detalles de los Servicios</em></h2>
+        <h2 class="text-center mb-4"><em>🛠️ Detalles de los Servicios</em></h2>
 
+        <br>
+        
         <!-- Pintura Personalizada -->
         <div id="detalle-pintura" class="detalle-servicio mb-5 d-flex align-items-center">
             <img src="imagenes/pintura.jpg" alt="Pintura Personalizada" class="img-fluid me-4" style="max-width: 300px;">
             <div>
-                <h3><em>Pintura Personalizada</em></h3>
+                <h3><em>Pintura Personalizada 🎨</em></h3>
                 <ul>
                     <li><strong>¿Qué ofrecemos?:</strong> Acabados de pintura con técnicas avanzadas como aerografía, efectos metálicos o mate, y combinaciones de colores únicas.</li>
                     <li><strong>Beneficio clave:</strong> Personaliza el exterior de tu coche para que destaque entre los demás. Ideal para renovar o transformar completamente su aspecto.</li>
@@ -171,7 +168,7 @@
         <div id="detalle-interiores" class="detalle-servicio mb-5 d-flex align-items-center">
             <img src="imagenes/interiores.jpg" alt="Mejoras de Interiores" class="img-fluid me-4" style="max-width: 300px;">
             <div>
-                <h3><em>Mejoras de Interiores</em></h3>
+                <h3><em>Mejoras de Interiores 💡</em></h3>
                 <ul>
                     <li><strong>¿Qué incluye?:</strong> Tapicería en cuero, costuras personalizadas, instalación de paneles táctiles, luces ambientales LED y más.</li>
                     <li><strong>Beneficio clave:</strong>  Eleva la comodidad y el lujo de tu coche, creando una experiencia de conducción más placentera y moderna.</li>
@@ -185,7 +182,7 @@
         <div id="detalle-audio" class="detalle-servicio mb-5 d-flex align-items-center">
             <img src="imagenes/audio.jpg" alt="Equipos de Audio" class="img-fluid me-4" style="max-width: 300px;">
             <div>
-                <h3><em>Equipos de Audio</em></h3>
+                <h3><em>Equipos de Audio 🔊</em></h3>
                 <ul>
                     <li><strong>¿Qué instalamos?:</strong> Altavoces de alta fidelidad, subwoofers, amplificadores y sistemas con conectividad Bluetooth y Wi-Fi.</li>
                     <li><strong>Beneficio clave:</strong> Experimenta un sonido potente y envolvente con tecnología optimizada para tu vehículo.</li>
@@ -199,7 +196,7 @@
         <div id="detalle-accesorios" class="detalle-servicio mb-5 d-flex align-items-center">
             <img src="imagenes/accesorios.jpeg" alt="Accesorios Personalizados" class="img-fluid me-4" style="max-width: 300px;">
             <div>
-                <h3><em>Accesorios Personalizados</em></h3>
+                <h3><em>Accesorios Personalizados 🔘</em></h3>
                 <ul>
                     <li><strong>¿Qué ofrecemos?:</strong> Llantas exclusivas, alerones, luces personalizadas, pedales deportivos y acabados interiores únicos.</li>
                     <li><strong>Beneficio clave:</strong> Dale un toque personal a tu coche, reflejando tu estilo y personalidad en cada detalle.</li>
@@ -213,7 +210,7 @@
         <div id="detalle-motor" class="detalle-servicio mb-5 d-flex align-items-center">
             <img src="imagenes/motor.jpg" alt="Afinación de Motor" class="img-fluid me-4" style="max-width: 300px;">
             <div>
-                <h3><em>Afinación de Motor</em></h3>
+                <h3><em>Afinación de Motor ⚙️🚗</em></h3>
                 <ul>
                     <li><strong>¿Qué incluye?:</strong> Reprogramación del ECU, mejoras en el sistema de escape, ajustes del turbo y calibraciones de alto rendimiento.</li>
                     <li><strong>Beneficio clave:</strong> Saca el máximo potencial de tu motor, mejorando la potencia, eficiencia y velocidad.</li>
@@ -227,7 +224,7 @@
         <div id="detalle-video" class="detalle-servicio d-flex align-items-center">
             <img src="imagenes/instalacion-video.jpg" alt="Sistemas de Video" class="img-fluid me-4" style="max-width: 300px;">
             <div>
-                <h3><em>Sistemas de Video</em></h3>
+                <h3><em>Sistemas de Video 🎥</em></h3>
                 <ul>
                     <li><strong>¿Qué instalamos?:</strong> Pantallas táctiles, reproductores multimedia, cámaras de 360º y sistemas de entretenimiento en asientos traseros.</li>
                     <li><strong>Beneficio clave:</strong> Entretenimiento sin límites durante los viajes, ideal para familias o largas rutas.</li>
