--- a/sobremi.html
+++ b/sobremi.html
@@ -38,29 +38,25 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <div class="container">
+    <nav>
+        <div class="logo">
             <a class="navbar-brand" href="index.html">Epic Customs</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html"><strong>Inicio</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="servicios.html"><strong>Servicios</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="proyectos.html"><strong>Proyectos</strong></a></li>
-                    <li class="nav-item"><a class="nav-link active" href="sobremi.html"><strong>Sobre mí</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="testimonios.html"><strong>Testimonios</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacto.html"><strong>Contacto</strong></a></li>
-                </ul>
-            </div>
         </div>
+        <ul class="nav-links">
+            <li class="nav-item"><a href="index.html"><strong>Inicio</strong></a></li>
+            <li class="nav-item"><a href="servicios.html"><strong>Servicios</strong></a></li>
+            <li class="nav-item"><a href="proyectos.html"><strong>Proyectos</strong></a></li>
+            <li class="nav-item"><a class="nav-link active" href="sobremi.html"><strong>Sobre mí</strong></a></li>
+            <li class="nav-item"><a href="testimonios.html"><strong>Testimonios</strong></a></li>
+            <li class="nav-item"><a href="contacto.html"><strong>Contacto</strong></a></li>
+        </ul>
     </nav>
+    
 
      <!-- Sección Sobre Nosotros -->
      <section id="sobrenosotros" class="text-white py-5" style="background-color: #000000;">
         <div class="container">
-            <h1 class="text-center mb-4"><em>Sobre Nosotros</em></h1>
+            <h1 class="text-center mb-4"><em>Sobre Nosotros ❤️‍🔥</em></h1>
             <h2>¡Hola! Bienvenido a Epic Customs.</h2>
             <p class="lead">Somos un equipo apasionado por los autos y la personalización automotriz. A lo largo de los años, hemos trabajado en varios proyectos de personalización que van desde 
                 el ajuste de motores hasta la transformación estética completa de vehículos. Nuestro objetivo es brindar un servicio que no solo cumpla con las expectativas de nuestros clientes, 
@@ -83,7 +79,7 @@
 
     <!-- Sección Sobre mí -->
     <section id="sobremi" class="py-5" style="background-color: #000000;">
-        <h1 class="text-center mb-4">Sobre Mí</h1>
+        <h1 class="text-center mb-4">Sobre Mí 🧘</h1>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -94,10 +90,23 @@
                     <p class="lead">Bienvenido a Epic Customs. Soy un apasionado del mundo del tuning y la personalización de vehículos. Desde pequeño me ha fascinado el diseño y la ingeniería automotriz, y a lo largo de los años he desarrollado mis habilidades en la creación de proyectos únicos y exclusivos.</p>
                     <p>Mi objetivo es transformar cada vehículo que pasa por mis manos, creando algo que no solo sea estéticamente impresionante, sino también funcional y con un rendimiento excepcional. Cada proyecto es una oportunidad para dar rienda suelta a mi creatividad y llevar la personalización de coches a un nivel superior.</p>
                     <p>Si quieres saber más sobre mi experiencia o los proyectos en los que he trabajado, no dudes en contactarme. ¡Estoy aquí para hacer realidad tus ideas!</p>
-                <!-- Botón de contacto -->
-                <div class="text-center mt-4">
-                    <a href="contacto.html" class="btn btn-primary btn-lg">Contacta conmigo</a>
+                
+                    <!-- Botón de contacto -->
+                <div class="btn-conteiner">
+                    <a class="btn-content" href="#">
+                    <span class="btn-title">Contacta conmigo</span>
+                    <span class="icon-arrow">
+                        <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g id="arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                            <path id="arrow-icon-one" d="M40.1543933,3.89485454 L43.9763149,0.139296592 C44.1708311,-0.0518420739 44.4826329,-0.0518571125 44.6771675,0.139262789 L65.6916134,20.7848311 C66.0855801,21.1718824 66.0911863,21.8050225 65.704135,22.1989893 C65.7000188,22.2031791 65.6958657,22.2073326 65.6916762,22.2114492 L44.677098,42.8607841 C44.4825957,43.0519059 44.1708242,43.0519358 43.9762853,42.8608513 L40.1545186,39.1069479 C39.9575152,38.9134427 39.9546793,38.5968729 40.1481845,38.3998695 C40.1502893,38.3977268 40.1524132,38.395603 40.1545562,38.3934985 L56.9937789,21.8567812 C57.1908028,21.6632968 57.193672,21.3467273 57.0001876,21.1497035 C56.9980647,21.1475418 56.9959223,21.1453995 56.9937605,21.1432767 L40.1545208,4.60825197 C39.9574869,4.41477773 39.9546013,4.09820839 40.1480756,3.90117456 C40.1501626,3.89904911 40.1522686,3.89694235 40.1543933,3.89485454 Z" fill="#FFFFFF"></path>
+                            <path id="arrow-icon-two" d="M20.1543933,3.89485454 L23.9763149,0.139296592 C24.1708311,-0.0518420739 24.4826329,-0.0518571125 24.6771675,0.139262789 L45.6916134,20.7848311 C46.0855801,21.1718824 46.0911863,21.8050225 45.704135,22.1989893 C45.7000188,22.2031791 45.6958657,22.2073326 45.6916762,22.2114492 L24.677098,42.8607841 C24.4825957,43.0519059 24.1708242,43.0519358 23.9762853,42.8608513 L20.1545186,39.1069479 C19.9575152,38.9134427 19.9546793,38.5968729 20.1481845,38.3998695 C20.1502893,38.3977268 20.1524132,38.395603 20.1545562,38.3934985 L36.9937789,21.8567812 C37.1908028,21.6632968 37.193672,21.3467273 37.0001876,21.1497035 C36.9980647,21.1475418 36.9959223,21.1453995 36.9937605,21.1432767 L20.1545208,4.60825197 C19.9574869,4.41477773 19.9546013,4.09820839 20.1480756,3.90117456 C20.1501626,3.89904911 20.1522686,3.89694235 20.1543933,3.89485454 Z" fill="#FFFFFF"></path>
+                            <path id="arrow-icon-three" d="M0.154393339,3.89485454 L3.97631488,0.139296592 C4.17083111,-0.0518420739 4.48263286,-0.0518571125 4.67716753,0.139262789 L25.6916134,20.7848311 C26.0855801,21.1718824 26.0911863,21.8050225 25.704135,22.1989893 C25.7000188,22.2031791 25.6958657,22.2073326 25.6916762,22.2114492 L4.67709797,42.8607841 C4.48259567,43.0519059 4.17082418,43.0519358 3.97628526,42.8608513 L0.154518591,39.1069479 C-0.0424848215,38.9134427 -0.0453206733,38.5968729 0.148184538,38.3998695 C0.150289256,38.3977268 0.152413239,38.395603 0.154556228,38.3934985 L16.9937789,21.8567812 C17.1908028,21.6632968 17.193672,21.3467273 17.0001876,21.1497035 C16.9980647,21.1475418 16.9959223,21.1453995 16.9937605,21.1432767 L0.15452076,4.60825197 C-0.0425130651,4.41477773 -0.0453986756,4.09820839 0.148075568,3.90117456 C0.150162624,3.89904911 0.152268631,3.89694235 0.154393339,3.89485454 Z" fill="#FFFFFF"></path>
+                        </g>
+                        </svg>
+                    </span> 
+                    </a>
                 </div>
+
                 </div>
             </div>
         </div>
