--- a/testimonios.html
+++ b/testimonios.html
@@ -37,29 +37,25 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <div class="container">
+    <nav>
+        <div class="logo">
             <a class="navbar-brand" href="index.html">Epic Customs</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html"><strong>Inicio</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="servicios.html"><strong>Servicios</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="proyectos.html"><strong>Proyectos</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="sobremi.html"><strong>Sobre mí</strong></a></li>
-                    <li class="nav-item"><a class="nav-link active" href="testimonios.html"><strong>Testimonios</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacto.html"><strong>Contacto</strong></a></li>
-                </ul>
-            </div>
         </div>
+        <ul class="nav-links">
+            <li class="nav-item"><a href="index.html"><strong>Inicio</strong></a></li>
+            <li class="nav-item"><a href="servicios.html"><strong>Servicios</strong></a></li>
+            <li class="nav-item"><a href="proyectos.html"><strong>Proyectos</strong></a></li>
+            <li class="nav-item"><a href="sobremi.html"><strong>Sobre mí</strong></a></li>
+            <li class="nav-item"><a class="nav-link active" href="testimonios.html"><strong>Testimonios</strong></a></li>
+            <li class="nav-item"><a href="contacto.html"><strong>Contacto</strong></a></li>
+        </ul>
     </nav>
+    
 
     <!-- Sección de Testimonios -->
     <section class="py-5" style="background-color: #000000; color: white;">
         <div class="container">
-            <h1 class="text-center mb-4"><em>Opiniones de Clientes</em></h1>
+            <h1 class="text-center mb-4"><em>✍️ Opiniones de Clientes ⭐</em></h1>
             <p class="text-center mb-5">Descubre lo que dicen nuestros clientes sobre Epic Customs.</p>
             <div class="row g-4">
                 <!-- Testimonio 1 -->
