--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- CSS Personalitzat -->
     <link rel="stylesheet" href="estils.css">
-    <link rel="icon" href="imagenes/favicon.jpg" type="image/x-icon">
+    <link rel="icon" type="image/jpeg" href="imagenes/favicon.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- Metadatos -->
@@ -67,7 +67,9 @@
             <h1><em>Epic Customs🔥 - Personalización de Coches 🚗✨</em></h1>
             <p class="lead"><strong>Lleva tu coche al siguiente nivel con diseños únicos y exclusivos.</strong></p>
             
-            <iframe width="710" height="400" src="Video.mp4" frameborder="0" allowfullscreen></iframe>
+            <iframe width="1000" height="500" src="https://www.youtube.com/embed/BK3jeMiyXKk" 
+                title="EpicCustoms - Vídeo Promocional" frameborder="0" allowfullscreen>
+            </iframe>
 
             <br>
             <br>
@@ -100,13 +102,13 @@
     <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="imagenes/golf_negro.jpg" class="d-block w-100" alt="Descripción de la imagen 1">
+            <img src="imagenes/promo2.png" class="d-block w-100" alt="Descripción de la imagen 1">
         </div>
         <div class="carousel-item">
-            <img src="imagenes/golf_rojo.jpg" class="d-block w-100" alt="Descripción de la imagen 2">
+            <img src="imagenes/promo.png" class="d-block w-100" alt="Descripción de la imagen 2">
         </div>
         <div class="carousel-item">
-            <img src="imagenes/banner1.png" class="d-block w-100" alt="Descripción de la imagen 3">
+            <img src="imagenes/banner.png" class="d-block w-100" alt="Descripción de la imagen 3">
         </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
