--- a/servicios.html
+++ b/servicios.html
@@ -152,7 +152,7 @@
         
         <!-- Pintura Personalizada -->
         <div id="detalle-pintura" class="detalle-servicio mb-5 d-flex align-items-center">
-            <img src="imagenes/pintura.jpg" alt="Pintura Personalizada" class="img-fluid me-4" style="max-width: 300px;">
+            <img src="imagenes/pintura.jpg" alt="Servei de pintura personalitzada per a vehicles." class="img-fluid me-4" style="max-width: 300px;">
             <div>
                 <h3><em>Pintura Personalizada 🎨</em></h3>
                 <ul>
@@ -166,7 +166,7 @@
 
         <!-- Mejoras de Interiores -->
         <div id="detalle-interiores" class="detalle-servicio mb-5 d-flex align-items-center">
-            <img src="imagenes/interiores.jpg" alt="Mejoras de Interiores" class="img-fluid me-4" style="max-width: 300px;">
+            <img src="imagenes/interiores.jpg" alt="Personalització i millora d'interiors de vehicles." class="img-fluid me-4" style="max-width: 300px;">
             <div>
                 <h3><em>Mejoras de Interiores 💡</em></h3>
                 <ul>
@@ -180,7 +180,7 @@
 
         <!-- Equipos de Audio -->
         <div id="detalle-audio" class="detalle-servicio mb-5 d-flex align-items-center">
-            <img src="imagenes/audio.jpg" alt="Equipos de Audio" class="img-fluid me-4" style="max-width: 300px;">
+            <img src="imagenes/audio.jpg" alt="Instal·lació d'equips d'àudio d'alta qualitat per a cotxes." class="img-fluid me-4" style="max-width: 300px;">
             <div>
                 <h3><em>Equipos de Audio 🔊</em></h3>
                 <ul>
@@ -194,7 +194,7 @@
 
         <!-- Accesorios Personalizados -->
         <div id="detalle-accesorios" class="detalle-servicio mb-5 d-flex align-items-center">
-            <img src="imagenes/accesorios.jpeg" alt="Accesorios Personalizados" class="img-fluid me-4" style="max-width: 300px;">
+            <img src="imagenes/accesorios.jpeg" alt="Accessoris personalitzats per a vehicles." class="img-fluid me-4" style="max-width: 300px;">
             <div>
                 <h3><em>Accesorios Personalizados 🔘</em></h3>
                 <ul>
@@ -208,7 +208,7 @@
 
         <!-- Afinación de Motor -->
         <div id="detalle-motor" class="detalle-servicio mb-5 d-flex align-items-center">
-            <img src="imagenes/motor.jpg" alt="Afinación de Motor" class="img-fluid me-4" style="max-width: 300px;">
+            <img src="imagenes/motor.jpg" alt="Afinació i optimització del motor per a un millor rendiment." class="img-fluid me-4" style="max-width: 300px;">
             <div>
                 <h3><em>Afinación de Motor ⚙️🚗</em></h3>
                 <ul>
@@ -222,7 +222,7 @@
 
         <!-- Sistemas de Video -->
         <div id="detalle-video" class="detalle-servicio d-flex align-items-center">
-            <img src="imagenes/instalacion-video.jpg" alt="Sistemas de Video" class="img-fluid me-4" style="max-width: 300px;">
+            <img src="imagenes/instalacion-video.jpg" alt="Instal·lació de sistemes de vídeo per a entreteniment en vehicles." class="img-fluid me-4" style="max-width: 300px;">
             <div>
                 <h3><em>Sistemas de Video 🎥</em></h3>
                 <ul>
