--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
     <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="imagenes/promo2.png" class="d-block w-100" alt="Descripción de la imagen 1">
+            <img src="imagenes/promo2.png" class="d-block w-100" alt="Promoció d'estiu amb descomptes en tots els productes.">
         </div>
         <div class="carousel-item">
-            <img src="imagenes/promo.png" class="d-block w-100" alt="Descripción de la imagen 2">
+            <img src="imagenes/promo.png" class="d-block w-100" alt="Descompte especial en productes seleccionats durant el mes.">
         </div>
         <div class="carousel-item">
-            <img src="imagenes/banner.png" class="d-block w-100" alt="Descripción de la imagen 3">
+            <img src="imagenes/banner.png" class="d-block w-100" alt="Banner publicitari amb les novetats d'Epic Customs.">
         </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -129,7 +129,7 @@
             <div class="row g-4">
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="imagenes/pintura.jpg" class="card-img-top" alt="Pintura Personalizada">
+                        <img src="imagenes/pintura.jpg" class="card-img-top" alt="Pintura personalitzada en vehicles d'alta qualitat.">
                         <div class="card-body">
                             <h3 class="card-title">Pintura Personalizada</h3>
                             <p class="card-text">Diseños únicos con acabados de alta calidad.</p>
@@ -138,7 +138,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="imagenes/interiores.jpg" class="card-img-top" alt="Interiores de Lujo">
+                        <img src="imagenes/interiores.jpg" class="card-img-top" alt="Interiors de luxe per a vehicles personalitzats.">
                         <div class="card-body">
                             <h3 class="card-title">Mejoras de Interiores</h3>
                             <p class="card-text">Comodidad y estilo para el interior de tu vehículo.</p>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="imagenes/audio.jpg" class="card-img-top" alt="Equipos de Audio">
+                        <img src="imagenes/audio.jpg" class="card-img-top" alt="Equips d'àudio d'alta fidelitat per a cotxes.">
                         <div class="card-body">
                             <h3 class="card-title">Equipos de Audio</h3>
                             <p class="card-text">Instalación de sistemas de sonido de alta gama.</p>
@@ -210,14 +210,14 @@
             <br>
             <div class="row g-4">
                 <div class="col-md-6">
-                    <img src="imagenes/proyecto1.jpg" alt="Proyecto Mustang GT Edición Especial" class="img-fluid rounded shadow">
+                    <img src="imagenes/proyecto1.jpg" alt="Projecte Mustang GT Edició Especial amb personalització única." class="img-fluid rounded shadow">
                     <h4 class="mt-3">Mustang GT - Edición Especial BULLITT</h4>
                     <p>Transformación completa con pintura exclusiva, personalización y mejoras interiores de alta calidad para un acabado único. 
                         Cada elemento ha sido cuidadosamente seleccionado para reflejar estilo, comodidad y toques de lujo.
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <img src="imagenes/proyecto2.jpg" alt="Proyecto BMW Serie 3 con sonido mejorado" class="img-fluid rounded shadow">
+                    <img src="imagenes/proyecto2.jpg" alt="Projecte BMW Serie 3 amb so millorat per una experiència auditiva òptima." class="img-fluid rounded shadow">
                     <h4 class="mt-3">BMW Serie 3 - Sound Upgrade</h4>
                     <p>Equipos de audio personalizados con acabados de lujo y mejora de insonorización.</p>
                 </div>
