--- a/proyectos.html
+++ b/proyectos.html
@@ -71,7 +71,7 @@
         <!-- Proyecto 1: Imágen a la izquierda, Info a la derecha -->
 <div class="row mb-4">
     <div class="col-lg-4">
-        <img src="imagenes/proyecto1.jpg" alt="Mustang GT Edició Especial amb personalització d'alt rendiment." class="img-fluid rounded shadow w-100">
+        <img src="imagenes/proyecto1.jpg" alt="Mustang GT" class="img-fluid rounded shadow w-100">
         
         <strong>Detalles adicionales:</strong>
         <ul>
@@ -101,7 +101,7 @@
 <!-- Proyecto 2: Imágen a la izquierda, Info a la derecha -->
 <div class="row mb-4">
     <div class="col-lg-4">
-        <img src="imagenes/proyecto2.jpg" alt="BMW Serie 3 amb sistema de so d'alta fidelitat i modificacions estètiques." class="img-fluid rounded shadow w-100">
+        <img src="imagenes/proyecto2.jpg" alt="BMW Serie 3" class="img-fluid rounded shadow w-100">
         <strong>Detalles adicionales:</strong>
         <ul>
             <li>Sistema de sonido Alpine de 12 altavoces</li>
@@ -129,7 +129,7 @@
 <!-- Proyecto 3: Imágen a la izquierda, Info a la derecha -->
 <div class="row mb-4">
     <div class="col-lg-4">
-        <img src="imagenes/proyecto3.jpg" alt="Audi RS5 amb millores aerodinàmiques i tuning exclusiu." class="img-fluid rounded shadow w-100">
+        <img src="imagenes/proyecto3.jpg" alt="Audi RS5" class="img-fluid rounded shadow w-100">
         <strong>Detalles adicionales:</strong>
         <ul>
             <li>Suspensión deportiva KW</li>
@@ -158,7 +158,7 @@
 <!-- Proyecto 4: Imágen a la izquierda, Info a la derecha -->
 <div class="row mb-4">
     <div class="col-lg-4">
-        <img src="imagenes/proyecto4.jpg" alt="Chevrolet Camaro amb pintura personalitzada i millores de motor." class="img-fluid rounded shadow w-100">
+        <img src="imagenes/proyecto4.jpg" alt="Chevrolet Camaro" class="img-fluid rounded shadow w-100">
         <strong>Detalles adicionales:</strong>
         <ul>
             <li>Motor: Optimización del turbo y ECU personalizada</li>
