--- a/sobremi.html
+++ b/sobremi.html
@@ -83,7 +83,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="imagenes/sobremi.avif" alt="" class="img-fluid rounded-circle shadow">
+                    <img src="imagenes/sobremi.avif" alt="Foto de Perfil" class="img-fluid rounded-circle shadow">
                 </div>
                 <div class="col-md-6">
                     <h3>¡Hola! Soy Ismael Achamrouk</h3>
